# dynamov2_public

./: README.md
dynamov2_packages/: pyproject.toml
dynamov2_packages/dynamov2/database/: create_db.py  db_helper.py  models.py  remote_db.py
dynamov2_packages/dynamov2/docker_utils/: __init__.py  deploy_compose.py
dynamov2_packages/dynamov2/git_utils/: clean_compose_file.py  utils.py
dynamov2_packages/dynamov2/logger/: logger.py
dynamov2_packages/dynamov2/toolbox/: tools.py
dynamov2_packages/dynamov2/utils/: util.py
stage1/: .github_search_progress.json  .github_topic_search_progress.json  .gitignore  README.md  application_label.py  github_search.py  initialise_db.py  pyproject.toml
stage1/libs/agents/: agents.py  tools.py
stage1/libs/github/: __init__.py  compose_finder.py
stage1/libs/prompts/react/system/: crypto_react_system_prompt.txt  llm_react_system_prompt.txt  react_system_prompt.txt  reasoning_prompt.txt  reasoning_prompt_crypto.txt  reasoning_prompt_llm.txt  reasoning_prompt_streaming.txt  streaming_react_system_prompt.txt
stage1/libs/prompts/react/user/: crypto_label_generation_prompt.txt  label_generation_prompt.txt  llm_label_generation_prompt.txt  streaming_label_generation_prompt.txt
stage2/: .gitignore  README.md  main.py  process_repository.py  pyproject.toml  queue_generator.py
stage2/src/: clean_compose_file.py  message_queue.py  message_worker.py
stage2/test/: README.md  docker-compose.yml  run_test.sh  ssl_test.py  test_capture.py
stage3/: .gitignore  README.md  agent_interaction.py  agent_interaction_system_prompt.j2  application_internet_egress_report.csv  copilot_codex.py  generate_env_files_from_agent_run.py  generate_sankey_chart.py  heuristic_generation.py  mcp_server.py  openhands_codex.py  pyproject.toml  run_agents_gpt.py  run_agents_ollama.py
stage3/.github/agents/: my-agent.agent.md  testing.agent.md
stage3/dynamo_src/: Dockerfile.codex  codex.py  dynamov2_system_prompt.j2  environment_agent.py  models.py  requirements-codex.txt  run_container_gpt.py  run_container_ollama.py
stage3/dynamo_src/databases/: docker-compose.yml
stage3/dynamo_src/helper/: clean_compose_file.py  connect_to_mcp.py  git_utils.py
stage3/dynamo_src/helper/libs/misc/: file_copy.py  logger.py
stage3/test_files/: client.py  test.py
stage3/tests/: test_env_variables.py  test_sandbox.py
stage4/: .gitignore  README.md  process_pcap.py  process_pcap_traffic_parameters.py  pyproject.toml
stage4/src/: dockerfile  extract_hostname.py  flowmeter_setup.py  iana_port_mapping.csv  process_traffic_profile.py
stage5/: .env.example  .gitignore  README.md  pyproject.toml
stage5/src/: Dockerfile  compose_to_swarm_copilot.py  controler.py  helper.py  prepare_directory.py  setup.sh  teardown.sh  topology.mmd
