[project]
name = "dynamov2_packages"
version = "0.1.41"
description = "Shared packages"
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "colorama>=0.4.6",
  "langchain-ollama>=1.0.1",
  "langchain>=1.2.0",
  "langchain-core>=1.2.4",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dynamov2*"]