[project]
name = "stage-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "dotenv>=0.9.9",
    "langchain>=1.1.3",
    "langchain-core>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.3",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "tqdm>=4.67.1",
    "dynamov2_packages @ git+ssh://git@github.com/iambcl/dynamov2_packages.git@main",
]

[tool.setuptools]
py-modules = []
