[project]
name = "stage-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "dynamov2_packages @ git+ssh://git@github.com/iambcl/dynamov2_packages.git@main",
    "psycopg2-binary>=2.9.11",
]

[tool.setuptools]
py-modules = []
