[project]
name = "stage-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "dynamov2_packages @ git+ssh://git@github.com/iambcl/dynamov2_packages.git@main",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "langchain-google-genai>=4.1.2",
]

[tool.setuptools]
py-modules = []
